[metadata]
name = sphinx-jinja
author = Pierre Tardy
author_email = tardyp@gmail.com
summary = includes jinja templates in a documentation
description_file = README.rst
home_page = https://github.com/tardyp/sphinx-jinja
license = MIT
license_file = LICENSE
keywords =
    sphinx
    jinja

[options]
install_requires =
    docutils
    jinja2
    sphinx
namespace_packages =
    sphinxcontrib
packages =
    sphinxcontrib

[flake8]
max-line-length = 120
